// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsletterPuffButton renders the button with the text \`Saving...\` 1`] = `
<body>
  <div>
    <button
      style="font-family: GillSansMTStd-Medium; font-size: 16px; line-height: 0; align-items: center; background-color: transparent; border-radius: 2px; color: rgb(29, 29, 27); cursor: pointer; height: 45px; justify-content: center; min-width: 100px; padding-top: 4px; width: 100%; border-color: #1d1d1b; border-style: solid; border-width: 2px; elevation: 0; letter-spacing: 0.2px;"
      type="button"
    >
      Saving…
    </button>
  </div>
</body>
`;

exports[`NewsletterPuffButton renders the button with the text \`Sign up to newsletter\` 1`] = `
<body>
  <div>
    <button
      style="font-family: GillSansMTStd-Medium; font-size: 16px; line-height: 0; align-items: center; background-color: transparent; border-radius: 2px; color: rgb(29, 29, 27); cursor: pointer; height: 45px; justify-content: center; min-width: 100px; padding-top: 4px; width: 100%; border-color: #1d1d1b; border-style: solid; border-width: 2px; elevation: 0; letter-spacing: 0.2px;"
      type="button"
    >
      Sign up now
    </button>
  </div>
</body>
`;
